[workspace]
resolver = "2"
members = ["agent"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/SmooAI/agent"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
module_name_repetitions = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
doc_markdown = "allow"
significant_drop_tightening = "allow"
missing_const_for_fn = "allow"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }

# HTTP client — rustls + hickory DNS for portability into microVMs etc.
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls-webpki-roots", "charset", "http2", "hickory-dns"] }

# WebSocket
tokio-tungstenite = "0.26"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"

# Error handling
anyhow = "1"
thiserror = "2"

# Misc
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
bytes = "1"
futures-core = "0.3"
futures-util = "0.3"
dirs-next = "2"

# Optional — sqlite checkpoint store
rusqlite = { version = "0.32", features = ["bundled"] }

# Dev
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
